tests/ui/endpoint/invalid_body_ty.stderr
error[E0277]: the trait bound `FooBody: OpenapiType` is not satisfied
  --> tests/ui/endpoint/invalid_body_ty.rs:15:16
   |
15 | fn endpoint(_: FooBody) {
   |                ^^^^^^^ the trait `OpenapiType` is not implemented for `FooBody`, which is required by `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Body: RequestBody`
   |
   = help: the following other types implement trait `OpenapiType`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Body` to implement `gotham_restful::types::ResourceType`
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Body` to implement `RequestBody`
note: required by a bound in `gotham_restful::EndpointWithSchema::Body`
  --> src/endpoint.rs
   |
   |     type Body: RequestBody + Send;
   |                ^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Body`

error[E0277]: the trait bound `FooBody: RequestBody` is not satisfied
  --> tests/ui/endpoint/invalid_body_ty.rs:15:16
   |
15 | fn endpoint(_: FooBody) {
   |                ^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `FooBody`, which is required by `FooBody: RequestBody`
   |
   = help: the trait `RequestBody` is implemented for `Raw<T>`
   = note: required for `FooBody` to implement `serde::de::DeserializeOwned`
   = note: required for `FooBody` to implement `RequestBody`
note: required by a bound in `gotham_restful::EndpointWithSchema::Body`
  --> src/endpoint.rs
   |
   |     type Body: RequestBody + Send;
   |                ^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Body`
